<resources>
    <string name="app_name">BestBuy</string>
    <string name="splash_text">WELCOME\nENJOY BUYING</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quotation Best Buy</string>
    <string name="nav_header_subtitle">Shop anytime, anywhere...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cart">shopping cart</string>
    <string name="api_bestbuy">raUvjWmgiqMJnI1N6FNJ8nbS</string>

    <string name="menu_products">Products</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_openbox">Open Box</string>
    <string name="menu_recommendations">Recommendations</string>
    <string name="menu_details">Details</string>

    <string name="menu_cart">Cart</string>

    <string-array name="categories">
        <item>Choose Category</item>
        <item>All Cell Phones with Plans</item>
        <item>Desktop &amp; All-in-One Computers</item>
        <item>Digital Cameras</item>
        <item>Health, Fitness &amp; Beauty</item>
        <item>Headphones</item>
        <item>Home Audio</item>
        <item>Home Automation &amp; Security</item>
        <item>iPad, Tablets &amp; E-Readers</item>
        <item>Laptops</item>
        <item>Nintendo 3DS</item>
        <item>PlayStation 4</item>
        <item>Portable &amp; Wireless Speakers</item>
        <item>PS Vita</item>
        <item>Ranges, Cooktops &amp; Ovens</item>
        <item>Refrigerators</item>
        <item>Small Kitchen Appliances</item>
        <item>TVs</item>
        <item>Washers &amp; Dryers</item>
        <item>Wit U</item>
        <item>Xbox One</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_product">Search</string>
    <string name="itemNameStore">Store</string>
    <string name="type_store">Type Store</string>
    <string name="address_store">Address</string>
    <string name="store_phone">Phone</string>
</resources>