<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="30dp"
    android:elevation="50dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="#EFE8E8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Media -->
        <ImageView
            android:id="@+id/store_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/store"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/menu_products"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemNameStore"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/store_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_phone"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/store_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_store"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/store_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_store"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>